--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,15 @@
 {
-    "name": "WikiPop",
+    "name": "Reveal It",
     "version": "1.0",
-    "description": "Popup definitions for wikipedia links",
+    "description": "Highlight a startup/company to reveal what they do. By @saranyan",
     "manifest_version": 2,
+    "icons": { 
+           "48": "icon_48.png",
+          "128": "icon_128.png" },
+    "browser_action": {
+        "default_icon": "icon_128.png",
+        "default_popup": "popup.html"
+    }, 
     "content_scripts": 
     [
         {
@@ -14,7 +21,7 @@
             [
                 "jquery.js", 
                 "hoverIntent.js", 
-                "WikiPop.js"
+                "CompanyName.js"
             ]
         }
     ],
